fixed css spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,13 +42,12 @@ a>img:hover {
 /* header and footer */
 
 #name, #navigation {
+	padding-top: 2em;
 	text-align: center;
 }
 
 #name {
-	padding-top: 2em;
 	padding-bottom: 2em;
-	text-align: center;
 }
 
 #name h1 {
@@ -63,8 +62,12 @@ a>img:hover {
 	-webkit-animation: blinking-text-cursor 1s step-start 0s infinite;
 }
 
+#navigation {
+	padding-bottom: 1em;
+}
+
 #navigation h3 {
-	margin-bottom: 1.5em;
+	margin-bottom: .75em;
 }
 
 #push {
@@ -89,7 +92,6 @@ a>img:hover {
 
 #summary {
 	padding-top: 1em;
-	padding-bottom: 1em;
 }
 
 #summary:first-child {
@@ -113,6 +115,7 @@ a>img:hover {
 	list-style-type: none;
 	text-indent: 0;
 	margin: 0;
+	padding-top: 1em;
 }
 
 #summary ul li {
@@ -202,10 +205,10 @@ a.thumb {
 
 .image-caption {
 	position: relative;
+	margin-bottom: 0;
 	padding-top: .5em;
 	padding-bottom: .5em;
 	padding-left: .75em;
-	margin-bottom: 0;
 }
 
 .image-caption h3 {
